--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,58 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#container{
+   overflow: hidden;
+}  
+
+#main-content{
+   position: relative;
+   width: 100%;
+   height: 700px;
+   margin-top: -20px;
+   overflow: hidden;
+}
+
+.link{
+  text-decoration: none;
+  color: white;
+}
+
+#news-letter{
+  font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: white;
+  background-color: rgb(49, 47, 47);
+  padding-top: 20px;
+  height: 50px;
+  font-size: 20px;
+  text-align: center;
+} 
+
+#footer-ferrari{
+  color: white;
+  background-color: black;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  font-size: 10px;
+  padding:30px;
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-bottom: 50px;
+}
+
+#footer-menu{
+  text-align: center;
+  background-color: rgb(63, 63, 63);
+  height: 50px;
+  padding: 20px;
+  padding-left: 30%;
+  
+}
+
+#footer-menu li{
+   float: left;  
+   margin-left: 20px;
+   font-size: 12px; 
+   color: white;
+}
